--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 	<title>Mineturbina</title>
 </head>
 <body>
+	<header>
+		<div class="container">
+			<div class="header">
+				<div class="logo">
+					<a href="#"><img src="img/logo.png" alt="logo"></a>
+				</div>
+				<div class="menu">
+					<nav>
+						<a href="#">Home</a>
+						<a href="#">About Us</a>
+						<a href="#">White Paper</a>
+						<a href="#">Team</a>
+						<a href="#">Products</a>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</header>
+	<section id="banner">
+		<div class="container">
 
+		</div>
+	</section>
 </body>
 </html>
