--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 	</header>
 	<section id="banner">
 		<div class="container">
+			<div class="title">
 
+			</div>
 		</div>
 	</section>
 </body>
