--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 	<section id="banner">
 		<div class="container">
 			<div class="title">
-
+				<h1>Enterprise Crypto Mining Solutions  Highly Competitive Retail Price
+					Low Maintenance Solutions
+				</h1>
 			</div>
 		</div>
 	</section>
