--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 						<a href="#">Team</a>
 						<a href="#">Products</a>
 					</nav>
+					<select name="language" id="Language">
+						<option value="English">Eng</option>
+						<option value="Russian">Ru</option>
+						<option value="Ukraine">Ua</option>
+					</select>
 				</div>
 			</div>
 		</div>
@@ -29,9 +34,9 @@
 	<section id="banner">
 		<div class="container">
 			<div class="title">
-				<h1>Enterprise Crypto Mining Solutions  Highly Competitive Retail Price
-					Low Maintenance Solutions
+				<h1>Enterprise Crypto Mining Solutions  Highly Competitive Retail Price<br> Low Maintenance Solutions
 				</h1>
+				<a class="btn_preorder" href="#">Preorder now</a>
 			</div>
 		</div>
 	</section>
