--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<title>Mineturbina</title>
 </head>
 <body>
@@ -37,6 +38,36 @@
 				<h1>Enterprise Crypto Mining Solutions  Highly Competitive Retail Price<br> Low Maintenance Solutions
 				</h1>
 				<a class="btn_preorder" href="#">Preorder now</a>
+			</div>
+			<div class="banner-items">
+				<div class="plug_play">
+					<img src="img/plug&play.png" alt="plug&play">
+					<div class="plug_title">
+						<h3>Plug & Play Rack</h3>
+						<p>designed technology is based on the practical experience of experts who have been upgrading crypto mining rigs as of 2010
+						</p>
+						<a href="#"><i class="fas fa-arrow-circle-right"></i>Read More</a>
+					</div>
+				</div>
+				<div class="item web">
+					<img src="img/web.png" alt="web">
+					<h3>web development</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+					</p>
+				</div>
+				<div class="item time">
+					<img src="img/alltime.png" alt="time">
+					<h3>24/7</h3>
+					<p>Advance Full Monitoring System
+						Propriety configuration
+						Advanced Cooling Solutions
+					</p>
+				</div>
+				<div class="item garranty">
+					<img src="img/garranty.png" alt="garranty">
+					<h3>3 month warranty</h3>
+					<p>with full service expansion option</p>
+				</div>
 			</div>
 		</div>
 	</section>
