--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a class="btn_preorder" href="#">Preorder now</a>
 			</div>
 			<div class="banner-items">
-				<div class="plug_play">
+				<!--<div class="plug_play">
 					<img src="img/plug&play.png" alt="plug&play">
 					<div class="plug_title">
 						<h3>Plug & Play Rack</h3>
@@ -48,12 +48,13 @@
 						</p>
 						<a href="#"><i class="fas fa-arrow-circle-right"></i>Read More</a>
 					</div>
-				</div>
+				</div>-->
 				<div class="item web">
 					<img src="img/web.png" alt="web">
-					<h3>web development</h3>
+					<h3>Web Development</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
 					</p>
+					<a href="#"><i class="fas fa-arrow-circle-right"></i>Read More</a>
 				</div>
 				<div class="item time">
 					<img src="img/alltime.png" alt="time">
@@ -62,11 +63,13 @@
 						Propriety configuration
 						Advanced Cooling Solutions
 					</p>
+					<a href="#"><i class="fas fa-arrow-circle-right"></i>Read More</a>
 				</div>
 				<div class="item garranty">
 					<img src="img/garranty.png" alt="garranty">
 					<h3>3 month warranty</h3>
 					<p>with full service expansion option</p>
+					<a href="#"><i class="fas fa-arrow-circle-right"></i>Read More</a>
 				</div>
 			</div>
 		</div>
