--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 					<a href="#"><img src="img/logo.png" alt="logo"></a>
 				</div>
 				<div class="menu">
+					<div class="hidden-menu">
+					<div class="menu-toggle">
+						<input id="burger" type="checkbox">
+						<label for="burger">
+							<span></span>
+							<span></span>
+							<span></span>
+						</label>
+					</div>
 					<nav>
 						<a href="#">Home</a>
 						<a href="#">About Us</a>
@@ -23,6 +32,7 @@
 						<a href="#">Team</a>
 						<a href="#">Products</a>
 					</nav>
+					</div>
 					<select name="language" id="Language">
 						<option value="English">Eng</option>
 						<option value="Russian">Ru</option>
