--- a/index.html
+++ b/index.html
@@ -6,8 +6,98 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
 	<title>Mineturbina</title>
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Righteous|Titillium+Web" rel="stylesheet">
+	<style>
+		@import url('https://fonts.googleapis.com/css?family=Permanent+Marker|Righteous|Titillium+Web');
+	</style>
 </head>
 <body>
+<header>
+	<div class="container">
+		<div class="item1">
+			<div class="engine">
+				<img src="img/engine.jpg">
+			</div>
+			<div class="container2">
+				<div class="text1">
+					<p>U chouse:&nbsp;&nbsp;Spiderminer craft</p>
+				</div>
+				<div class="text2">
+					<p>Hash-rate:&nbsp;&nbsp;13.5 Th/s</p>
+				</div>
+				<div class="text3">
+					<p>Power:&nbsp;&nbsp;1323W</p>
+				</div>
+			</div>
+		</div>
+		<div class="item2">
+			<div>
+				<h2>Preorder price<br>$9.680,00</h2><br>
+				<h6>Regular price:$12.000,00</h6>
+			</div>
+		</div>
+	</div>
+	<div class="line">
+		<div class="item3">
 
+		</div>
+	</div>
+</header>
+<!--<div id="wrapper">-->
+<!--<p><a class="button" href="#popup1">Click Me</a></p>-->
+<!--<p><a class="button" href="#popup2">Click Me Too</a></p>-->
+<!--</div>-->
+
+<!--<div id="popup1" class="overlay">-->
+<!--<div class="popup">-->
+<!--<h2>Info box</h2>-->
+<!--<a class="close" href="#">&times;</a>-->
+<!--<div class="content">-->
+<!--<p>This is done totally without JavaScript. Just HTML and CSS.</p>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<div id="popup2" class="overlay light">-->
+<!--<a class="cancel" href="#"></a>-->
+<!--<div class="popup">-->
+<!--<h2>What the what?</h2>-->
+<!--<div class="content">-->
+<!--<p>Click outside the popup to close.</p>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+
+<!--<button type="button" onclick="alert('Hello World!')">Preorder now</button>-->
+<div class="container3">
+	<div class="title">
+		<h2>Please fill information</h2>
+	</div>
+	<form action="#">
+		<div class="container4">
+			<div class="first-name">
+				First name:
+				<br>
+				<input type="text" name="firstname" value="">
+			</div>
+			<div class="last-name">
+				Last name:
+				<br>
+				<input type="text" name="lastname" value="">
+			</div>
+			<div class="e-mail">
+				E-mail:
+				<br>
+				<input type="text" name="e-mail" value="">
+			</div>
+			<div class="countri">
+				<select>
+
+				</select>
+			</div>
+		</div>
+	</form>
+</div>
 </body>
 </html>
