customs disigns monitoring

--- a/index.html
+++ b/index.html
@@ -8,6 +8,67 @@
 	<title>Mineturbina</title>
 </head>
 <body>
+<div class="main">
+	<img src="images/Vector-Smart-Object-copy-9.jpg">
+	<div class="first">24/7 Advance Full Monitoring System
+		<div class="second">Mineturbine proprietary monitoring system will alert & give you exact and effective
+			information
+			making
+			<div class="third"><p>sure that you make the maximum profit out of your business</p>
+			</div>
+		</div>
+	</div>
+</div>
+<p>
+	<div class="second_main">
+		<div class="level">
+			<h1>Highly level Scalable planning allow us to offer our
+<p>customers Custom designs.</p>
+</h1>
+</div>
+<div class="block"><b>The Blockchain Boom has just Begun</b>
+	<p>The exponential growth of blockchain-bases application has led to a similar explosion in the demand of mining
+		infrastructure. Traditional mining competitors have to deal with numerous problems. Few of them apply to our
+		mobile, decentral and scalable strategy.</p>
+	<div class="br"><b>READ OUR WHITEPAPER</b></div>
+</div>
 
+<div class="win"><b>Creating a Win-Win for Everyone</b>
+	<div>we create a win-win scenario for power plants: We pay power-plants (and other
+		energy hubs) for letting us use their otherwise unused local overcapacities. Win-win for the
+		blockchain: We provide stability by decentralizing mining activities again, letting the community
+		fully participate in mining and making-operations immune to local regulation, guvernmental
+		restrictions, energy price spikes and bringing peace of mind to the global blockchain infrastructure.
+	</div>
+</div>
+<div class="im">
+	<div class="im-left">
+		<img src="images/123.jpg">
+		<p><b>Plug & Play</b></p>
+		<p>We engineered a modular, turnkey solution featuring a fully automatic startup that guarantees fully
+			autonomous mining power</p>
+	</div>
+	<div class="im-center1">
+		<img src="images/234.jpg">
+		<p><b>Independent</b></p>
+		<p>Our mobility concept enables super-simple transportation and worldwide deployment, providing immunity , e
+			.g. from local political restrictions.</p>
+	</div>
+	<div class="im-center2">
+		<img src="images/345.jpg">
+		<p><b>Punny Scalable</b></p>
+		<p>Mobile and efficient low-cost hardware and optimized propietary management hardware guarantees excellent
+			scalability.</p>
+	</div>
+	<div class="im-right">
+		<img src="images/456.jpg">
+		<p><b>High Growth</b></p>
+		<p>Our reinvestment strategy enables us to quickly grow our fleet of mobile mining units, continuosly
+			boosting dividend payout each year.</p>
+	</div>
+</div>
+</div>
+</div>
+</p>
 </body>
 </html>
