--- a/index.html
+++ b/index.html
@@ -15,30 +15,26 @@
 				<div class="logo">
 					<a href="#"><img src="img/logo.png" alt="logo"></a>
 				</div>
-				<div class="menu">
-					<div class="hidden-menu">
-					<div class="menu-toggle">
+				<nav class="menu">
 						<input id="burger" type="checkbox">
 						<label for="burger">
 							<span></span>
 							<span></span>
 							<span></span>
 						</label>
-					</div>
-					<nav>
+					<div class="navigation">
 						<a href="#">Home</a>
 						<a href="#">About Us</a>
 						<a href="#">White Paper</a>
 						<a href="#">Team</a>
 						<a href="#">Products</a>
-					</nav>
 					</div>
 					<select name="language" id="Language">
 						<option value="English">Eng</option>
 						<option value="Russian">Ru</option>
 						<option value="Ukraine">Ua</option>
 					</select>
-				</div>
+				</nav>
 			</div>
 		</div>
 	</header>
