--- a/index.html
+++ b/index.html
@@ -136,8 +136,75 @@
         </div>
     </div>
 </div>
-</div>
-<div class="popup">
+<section id="stepper">
+	<div class="container">
+		<div class="stepper_title">
+			<h2>Roadmap</h2>
+		</div>
+		<div class="roadmap">
+			<ul>
+				<li class="circle">
+					<div class="road-line"></div>
+					<i class="fa fa-circle"></i>
+					<div class="road-line"></div>
+				</li>
+				<li class="right_span">
+					<p>January 2018</p>
+					<span><i class="fa fa-circle"></i>
+					Concept design</span>
+				</li>
+				<div class="road-line"></div>
+				<li class="left_span">
+					<span>design customised mining PCB<i class="fa fa-circle"></i></span>
+					<p>Mart 2018</p>
+				</li>
+				<div class="road-line grey"></div>
+				<li class="right_span jun">
+					<p>Jun 2018</p>
+					<span><i class="fa fa-circle"></i>
+					design customised MICRO CONTROLLER</span>
+				</li>
+				<div class="road-line grey"></div>
+				<li class="left_span july">
+					<span>DESIGN & SIMULATE COLLING SYSTEMS<i class="fa fa-circle"></i></span>
+					<p>July 2018</p>
+				</li>
+				<div class="road-line grey"></div>
+				<li class="right_span oct">
+					<p>October 2018</p>
+					<span><i class="fa fa-circle"></i>
+					BUILD & TEST RUN COLLING SYSTEM</span>
+				</li>
+				<div class="road-line grey"></div>
+				<li class="left_span nov">
+					<span>BEGIN ASSEMBLY CR1000 50 UNITS<i class="fa fa-circle"></i></span>
+					<p>November 2018</p>
+				</li>
+				<div class="road-line grey"></div>
+				<li class="right_span jan">
+					<p>January 2019</p>
+					<span><i class="fa fa-circle"></i>
+					HEAVY DUTY BETA SITE TESTING & DEBUG</span>
+				</li>
+				<div class="road-line grey"></div>
+				<li class="left_span march">
+					<span>FIRST CUSTOMER DELIVERY<i class="fa fa-circle"></i></span>
+					<p>March 2019</p>
+				</li>
+			</ul>
+		</div>
+		<div class="forma">
+			<form action="#">
+				<h3>﻿subscribe for update</h3>
+				<div class="mail">
+					<input type="email" placeholder="EMAIL">
+					<button>Give Me Updates</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</section>
+<!--<div class="popup">
 	<div class="container">
 		<div class="item1">
 			<div class="engine">
@@ -171,7 +238,6 @@
 	<p><a class="button" href="#popup1">Click Me</a></p>
 	<p><a class="button" href="#popup2">Click Me Too</a></p>
 	</div>
-
 	<!--<div id="popup1" class="overlay">-->
 	<!--<div class="popup">-->
 	<!--<h2>Info box</h2>-->
@@ -193,7 +259,7 @@
 	<!--</div>-->
 
 
-	<button type="button" onclick="alert('Hello World!')">Preorder now</button>
+	<!--<button type="button" onclick="alert('Hello World!')">Preorder now</button>
 	<div class="container3">
 		<div class="title">
 			<h2>Please fill information</h2>
@@ -223,6 +289,6 @@
 			</div>
 		</form>
 	</div>
-</div>
+</div>-->
 </body>
 </html>
