create section news

--- a/index.html
+++ b/index.html
@@ -204,6 +204,34 @@
 		</div>
 	</div>
 </section>
+<section id="newsSection">
+	<div class="container">
+		<div class="news-title">
+			<p>Our Blog</p>
+			<h2>Latest News</h2>
+		</div>
+		<div class="news-item">
+			<div class="blog">
+				<div class="img server"></div>
+				<span>January 25, 2017</span>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do</p>
+				<a href="#">Read More<i class="fa fa-caret-right"></i></a>
+			</div>
+			<div class="blog">
+				<div class="img bit"></div>
+				<span>January 25, 2017</span>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do</p>
+				<a href="#">Read More<i class="fa fa-caret-right"></i></a>
+			</div>
+			<div class="blog">
+				<div class="img coin"></div>
+				<span>January 25, 2017</span>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do</p>
+				<a href="#">Read More<i class="fa fa-caret-right"></i></a>
+			</div>
+		</div>
+	</div>
+</section>
 <!--<div class="popup">
 	<div class="container">
 		<div class="item1">
